# libdryox

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  _dryox.c  compile_commands.json  dryox_build.py  makefile  pyproject.toml  setup.py  templates.c  templates.h  test_mkdirp
.cache/clangd/index/: dryo_mkdirp.h.475EDBB2137B0D73.idx  dryoinit.c.7DF8E1BFF0149432.idx  dryoinit.h.B210CF73FEBEA965.idx  dryologging.c.1DA219BC3210A9E0.idx  dryologging.h.02AD5B9348B7A22F.idx
.github/workflows/: wheels.yml
cmake-build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
docs/: dryoinit.3  dryoinit.md
dryox/: __init__.py  dryoconfig.py  dryoinit.py  dryoinit.pyi  dryolog.py  dryolog.pyi
dryox.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
include/dryox/: dryoconfig.h  dryoinit.h  dryologging.h  init.h  logging.h  utils.h
include/dryox/tests/: ENVUTILS.h  REPORT.h  dryo_mkdirp.h  dryoinit.h  dryologging.h
include/dryox/utils/: dryo_mkdirp.h  dryo_tomlc17.h
include/wrapper/: dryo_tomlc17.h
src/: dryoconfig.c  dryoinit.c  dryologging.c  init.c  logging.c  test.c  utils.c
src/tests/: dryo_mkdirp.c  dryoinit.c  dryologging.c  testall.c
src/utils/: dryo_mkdirp.c  dryo_tomlc17.c
src/wrapper/: dryo_tomlc17.c
tests/: testall
