[build-system]
requires = ["setuptools", "cffi"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.cibuildwheel]
build = "cp313-*"

[project]
name = "dryox"
version = "1.2.0"
authors = [
  { name="Leah Hillis", email="leah@dryophoenix.net" },
]
description = "The main C library for the DryoX ecosystem."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
license = "Apache-2.0"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/Dryophoenix/libdryox"
Issues = "https://github.com/Dryophoenix/libdryox/issues"